--- a/INDEX.html
+++ b/INDEX.html
@@ -3,6 +3,7 @@
     <!-- to programmers out there: I wrote this myself without chatGPT, be kind :)-->
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Carlo Bramanti</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="media-queries.css">
