--- a/INDEX.html
+++ b/INDEX.html
@@ -27,7 +27,7 @@
             <label for="show-col-1" class="toggle page-title carlo" id="title-1">Carlo Bramanti</label>
 
 
-            <div class="navigation-mobile">
+            <div class="navigation-mobile" id="navigation-mobile-col1">
                 <label for="show-col-1" class="toggle page-title" id="title-1">Carlo Bramanti</label>
 
                 <div class="nav-right">
@@ -38,8 +38,7 @@
 
             </div>
 
-            <div class="top-bar">
-                <div class="Call-to-action"></div>
+            <div class="top-bar" id="top-bar-col1">
             </div>
 
             <div class="BIO">
@@ -71,8 +70,7 @@
                 <div style="display: flex; flex-direction: row;">
                     <img id="arrow-link2" src="arrow-right-red.svg"
                         style="height: 20px; padding-top: 10px; margin-left: 20px;">
-                    <a class="Link" href="https://www.instagram.com/carlo_bramanti_/" target="_blank"
-                        style="padding-top: 7px; margin-left: 10px; text-decoration: underline;">Instagram</a>
+                    <a class="Link" href="https://www.instagram.com/carlo_bramanti_/" target="_blank" style="font-family: 'Ronzino'; padding-top: 7px; margin-left: 10px; text-decoration: underline;">Instagram</a>
                 </div>
             </div>
         </div>
@@ -172,7 +170,7 @@
         <div>
             <div class="Get-in-touch" style="margin-left: 10px; font-size: 9pt;">GET IN TOUCH</div>
             <div style="display: flex; flex-direction: row;">
-                <div class="Contact" style="padding-top: 7px; margin-left: 10px; text-decoration: underline">
+                <div class="Contact" style="padding-top: 4px; margin-left: 10px; text-decoration: underline">
                     carlo.bramanti98@gmail.com</div>
             </div>
             <div style="display: flex; flex-direction: row;">
