pagination + nuove frasi

--- a/INDEX.html
+++ b/INDEX.html
@@ -155,11 +155,8 @@
                 </div>
             </section>
             <section class="swiper proj-mobile">
-                <div class="swiper-wrapper">
-                    <!--<div class="swiper-slide" style="background-color: yellow;">Slide1</div>
-                    <div class="swiper-slide" style="background-color: cornsilk;">Slide 2</div>
-                    <div class="swiper-slide" style="background-color: yellow;">Slide 3</div>-->
-                </div>
+                <div class="swiper-wrapper"></div>
+                <div class="swiper-pagination"></div>
             </section>
             <div class="footer3" id="Portfolio">Portfolio available upon request</div>
         </div>
