--- a/INDEX.html
+++ b/INDEX.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="media-queries.css">
     <link rel="stylesheet" href="https://use.typekit.net/jru0sxb.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="icon" type="image/png" href="/favicon.png"/>
 </head>
 
 <body onload="setTheme()">
