--- a/INDEX.html
+++ b/INDEX.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="media-queries.css">
     <link rel="stylesheet" href="https://use.typekit.net/jru0sxb.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="icon" type="image/png" href="/favicon-v2.png"/>
+    <link rel="icon" type="image/png" href="/favicon-v2.png?v=1">
 </head>
 
 <body onload="setTheme()">
@@ -91,7 +91,8 @@
                     it <a class="Link" href="https://www.setmargins.press/books/conspiratorial-design/"
                         target="_blank">here</a></div>
             </div>
-            <a class="project-frame" style="color: var(--textColor);" href="https://www.setmargins.press/books/conspiratorial-design/" target="_blank" id="latest-frame">
+            <a class="project-frame" style="color: var(--textColor);"
+                href="https://www.setmargins.press/books/conspiratorial-design/" target="_blank" id="latest-frame">
                 <img id="latest-image" src="images/CD/1.gif" alt="Latest Project" />
             </a>
             <div style="margin: 20px;">
@@ -142,11 +143,11 @@
                 <div class="project-frame-B">
                     <span id="tooltip" class="tooltip"> click for more </span>
                     <div class="image-loop" id="loop-B"></div>
-                    
+
                 </div>
 
                 <div class="other-projects-nav">
-                <div class="gallery-arrows">
+                    <div class="gallery-arrows">
                         <img id="arrow-left" src="arrow-left-red.svg" style="height: 16px; margin-right: 10px">
                         <img id="arrow-right" src="arrow-right-red.svg"
                             style="height: 16px; margin-right: 10px; position: relative;">
